# DrawLab

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DOCUMENTATION.md  INSTALL.md  LICENSE  README.md
cmake/: FindOptiX.cmake  configure_optix.cmake
config/: projectConfig.h.in
docs/: INSTALL.md
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt
ext/imgui/: CMakeLists.txt
ext/stb_image/: CMakeLists.txt
ext/tiny_obj_loader/: CMakeLists.txt
include/core/base/: common.h  exception.h  string.h
include/core/bitmap/: bitmap.h  block.h  color.h
include/core/math/: array.h  bbox.h  dpdf.h  frame.h  math.h  matrix.h  normal.h  point.h  ray.h  transform.h  vector.h  wrap.h
include/core/parser/: object.h  parser.h  proplist.h
include/core/utils/: pb.h  timer.h
include/editor/: block.h  context.h  gui.h  renderer.h  utils.h
include/opengl/: display.h  exception.h  texture.h
include/optix/: cuda_buffer.h  device_context.h  optix_params.h  optix_renderer.h  params.h  sutil.h  texture.h  vec_math.h
include/optix/camera/: camera.h  opencv.h  virtual.h
include/optix/common/: bsdf_common.h  camera.h  camera_data.h  geometry_data.h  light_data.h  material_data.h  optix_params.h  vec_math.h
include/optix/device/: intersection_refinement.h  onb.h  raygen.h  util.h  wrap.h
include/optix/host/: accel.h  camera.h  cuda_buffer.h  cuda_texture.h  device_context.h  function_table.h  launch_param.h  material.h  material_table.h  optix_accel.h  optix_scene.h  param_buffer.h  resource_manager.h  sutil.h  texture.h  trackball.h
include/optix/integrator/: integrator.h
include/optix/light/: area.h  envmap.h  light.h  point.h
include/optix/material/: aniso_ggx.h  dielectric.h  diffuse.h  material.h  microfacet.h  mirror.h
include/optix/math/: matrix.h  onb.h  random.h  vec_math.h  wrap.h
include/optix/shape/: mesh.h  shape.h
include/tracer/: accel.h  bsdf.h  camera.h  emitter.h  integrator.h  mesh.h  octree.h  optix_accel.h  rfilter.h  sampler.h  scene.h  texture.h
include/tracer/backend/: context.h  cpu_renderer.h  optix_renderer.h
include/tracer/backend/cpu/: cpu_renderer.h
include/utils/: pb.h  timer.h
src/: main.cpp
src/core/: CMakeLists.txt
src/core/base/: common.cpp  string.cpp
src/core/bitmap/: bitmap.cpp  block.cpp
src/core/math/: math.cpp  matrix.cpp  wrap.cpp
src/core/parser/: object.cpp  parser.cpp  proplist.cpp
src/editor/: block.cpp  gui.cpp  utils.cpp
src/opengl/: CMakeLists.txt  display.cpp  texture.cpp
src/optix/: CMakeLists.txt  device_context.cpp  main.cpp  optix_renderer.cpp  sutil.cpp  texture.cpp
src/optix/cuda/: device_programs.cu  diffuse.cu  hitgroup_pgs.cu  intersection_refinement.h  miss.cu  per_ray_data.h  shader_common.h
src/optix/cuda/integrator/: normal.cu  path.cu
src/optix/cuda/material/: aniso_ggx.cu  dielectric.cu  diffuse.cu  microfacet.cu  mirror.cu
src/optix/host/: accel.cpp  camera.cpp  cuda_texture.cpp  device_context.cpp  launch_param.cpp  material.cpp  optix_accel.cpp  optix_scene.cpp  param_buffer.cpp  sutil.cpp  texture.cpp  trackball.cpp
src/optix/integrator/: path.cu  simple.cu
src/optix/material/: dielectric.cu  diffuse.cu  mirror.cu
src/optix/miss/: miss.cu
src/tracer/: main.cpp  scene.cpp
src/tracer/accel/: accel.cpp  octree.cpp  optix_accel.cpp
src/tracer/backend/: context.cpp  cpu_renderer.cpp  main.cpp  optix_renderer.cpp
src/tracer/bsdf/: aniso_ggx.cpp  dielectric.cpp  diffuse.cpp  microfacet.cpp  mirror.cpp
src/tracer/camera/: opencv.cpp  perspective.cpp  virtual.cpp
src/tracer/emitter/: area.cpp  envmap.cpp  point.cpp
src/tracer/integrator/: normal.cpp  path.cpp  whitted.cpp
src/tracer/mesh/: mesh.cpp  obj.cpp  rectangle.cpp
src/tracer/rfilter/: rfilter.cpp
src/tracer/sampler/: independent.cpp
src/tracer/scene/: scene.cpp
src/tracer/texture/: bitmap.cpp  texture.cpp
tests/: CMakeLists.txt
tests/core/math/: test_matrix.cpp  test_normal.cpp  test_point.cpp  test_vector.cpp
